--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'",
         "build:cf": "ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo",
         "build:mta": "rimraf resources mta_archives && mbt build",
-        "undeploy": "cf undeploy comdeloittestripeui --delete-services --delete-service-keys --delete-service-brokers"
+        "undeploy": "cf undeploy comdeloittestripeui --delete-services --delete-service-keys --delete-service-brokers",
+        "test": "npm init"
     },
     "sapuxLayer": "CUSTOMER_BASE",
     "ui5": {
